finished main page with header,nav,section,aside tag and added comments

--- a/Raleigh2.html
+++ b/Raleigh2.html
@@ -20,8 +20,8 @@
             <div class="navbar-nav nav-tabs">
               <!--With a main page that introduces the state of your choice and additional pages for the capital and two other cities located within the state.-->
               <!--A consistent menu that allows the user to navigate to any other page on the site -->
-              <a class="nav-link active" aria-current="page" href="./index.html">HOME</a>
-              <a class="nav-link" href="./Raleigh2.html">RALEIGH</a>
+              <a class="nav-link" aria-current="page" href="./index.html">HOME</a>
+              <a class="nav-link active" href="./Raleigh.html">RALEIGH</a>
               <a class="nav-link" href="./Charlotte.html">CHARLOTTE</a>
               <a class="nav-link" href="./Asheville.html">ASHEVILLE</a>
             </div>
@@ -55,7 +55,7 @@
               </div>
             </div>
           </section>
-
+          
       <!-- an aside to display information related to the content -->
           <aside>
             <div class="row-md-6">
