--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               <!--With a main page that introduces the state of your choice and additional pages for the capital and two other cities located within the state.-->
               <!--A consistent menu that allows the user to navigate to any other page on the site -->
               <a class="nav-link active" aria-current="page" href="./index.html">HOME</a>
-              <a class="nav-link" href="./Raleigh2.html">RALEIGH</a>
+              <a class="nav-link" href="./Raleigh.html">RALEIGH</a>
               <a class="nav-link" href="./Charlotte.html">CHARLOTTE</a>
               <a class="nav-link" href="./Asheville.html">ASHEVILLE</a>
             </div>
@@ -43,30 +43,37 @@
           </div>
         </div>
       </header>
-
+<div class="container text-center">
+  <div class="row align-items-start">
+    <div class="col">
       <!-- a section to display the main content of the page -->
-        <section>
-          <div >
-            <div class="row-md-6">
+        <section class="">
+          <div>
+            <div class="c-md-6">
               <div class="h-100 p-5 text-bg-dark rounded-3">
                 <h2>Main Content</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 <button class="btn btn-outline-light" type="button">Example button</button>
               </div>
             </div>
-          </section>
+        </section>
+    </div>
 
-      <!-- an aside to display information related to the content -->
-          <aside>
-            <div class="row-md-6">
-              <div class="h-100 p-5 bg-body-tertiary border rounded-3">
-                <h2>Aside Content</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <button class="btn btn-outline-secondary" type="button">Example button</button>
-              </div>
-            </div>
-          </div>
-        </aside>
+    <div class="col">
+            <!-- an aside to display information related to the content -->
+                <aside>
+                  <div class="row-md-6">
+                    <div class="h-100 p-5 bg-body-tertiary border rounded-3">
+                      <h2>Aside Content</h2>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                      <button class="btn btn-outline-secondary" type="button">Example button</button>
+                    </div>
+                  </div>
+                </div>
+              </aside>
+
+  </div>
+</div>
 
     
         <footer class="pt-3 mt-4 text-body-secondary border-top text-center">
