Completed steps A-B from Task 2

--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
     
         <footer class="pt-3 mt-4 text-body-secondary border-top text-center">
           &copy; 2023 North Carolina. All rights reserved.
+          <!-- a link that opens an external website in a new window or tab using the target attribute -->
+          <a href="https://www.visitnc.com/" target="_blank">Visit North Carolina</a>
+
         </footer>
     </main>
     
