--- a/Raleigh.html
+++ b/Raleigh.html
@@ -21,7 +21,7 @@
               <!--With a main page that introduces the state of your choice and additional pages for the capital and two other cities located within the state.-->
               <!--A consistent menu that allows the user to navigate to any other page on the site -->
               <a class="nav-link" aria-current="page" href="./index.html">HOME</a>
-              <a class="nav-link active" href="./Raleigh2.html">RALEIGH</a>
+              <a class="nav-link active" href="./Raleigh.html">RALEIGH</a>
               <a class="nav-link" href="./Charlotte.html">CHARLOTTE</a>
               <a class="nav-link" href="./Asheville.html">ASHEVILLE</a>
             </div>
@@ -99,7 +99,8 @@
       </tr>
 
     </tbody>
-  </table>              </div>
+  </table>              
+</div>
             </div>
         </section>
     </div>
@@ -110,8 +111,12 @@
                   <div class="row-md-6">
                     <div class="h-100 p-5 bg-body-tertiary border rounded-3">
                       <h2>Aside Content</h2>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                      <button class="btn btn-outline-secondary" type="button">Example button</button>
+                      <!-- an HTML-coded ordered list with at least three list items -->
+                      <ol>
+                        <li>First item</li>
+                        <li>Second item</li>
+                        <li>Third item</li>
+                      </ol>
                     </div>
                   </div>
                 </div>
