--- a/Raleigh.html
+++ b/Raleigh.html
@@ -20,10 +20,10 @@
             <div class="navbar-nav nav-tabs">
               <!--With a main page that introduces the state of your choice and additional pages for the capital and two other cities located within the state.-->
               <!--A consistent menu that allows the user to navigate to any other page on the site -->
-              <a class="nav-link" aria-current="page" href="./index.html">HOME</a>
-              <a class="nav-link active" href="./Raleigh.html">RALEIGH</a>
-              <a class="nav-link" href="./Charlotte.html">CHARLOTTE</a>
-              <a class="nav-link" href="./Asheville.html">ASHEVILLE</a>
+              <a class="nav-link nav-button" aria-current="page" href="./index.html">HOME</a>
+              <a class="nav-link active nav-button" href="./Raleigh.html">RALEIGH</a>
+              <a class="nav-link nav-button" href="./Charlotte.html">CHARLOTTE</a>
+              <a class="nav-link nav-button" href="./Asheville.html">ASHEVILLE</a>
             </div>
           </div>
         </div>
