Completed Step C from the rubric

--- a/Charlotte.html
+++ b/Charlotte.html
@@ -31,6 +31,7 @@
 
       <!--  a header containing introductory content (pertaining to the document as a whole or a particular section of a document) -->
       <header>
+        <div id="absolute-content">GO CAROLINA PANTHERS!</div>
 
         <div class="p-5 mb-4 bg-body-tertiary rounded-3 ">
           <div class="container-fluid py-5 ">
@@ -117,11 +118,22 @@
                       </ul>
                     </div>
                   </div>
+                <!--a float property to position at least one HTML element to the side of another in your web page  -->
+                <!--  one class selector that is used at least two times to style HTML elements -->
+                  <div class="container">
+                    <div class="box1 my-class">
+                        <p>Box 1</p>
+                    </div>
+                    <div class="box2 my-class">
+                        <p>Box 2</p>
+                    </div>
+                  </div>
+
+                  </div>
                 </div>
               </aside>
 
   </div>
-</div>
 
     
         <footer class="pt-3 mt-4 text-body-secondary border-top text-center">
