--- a/Raleigh.html
+++ b/Raleigh.html
@@ -37,7 +37,7 @@
             <!--  a title in the head of each document that describes the web page’s individual topic -->
             <h1 class="display-5 fw-bold text-center">Welcome to Raleigh!</h1>
             <!--  a relevant image, including alternative text for the image -->
-            <img src="./images/raleigh.jpg" class="img-fluid" alt="Picture of Raleigh North Carolina">
+            <img src="./images/raleigh.jpg" class="img-fluid rounded mx-auto d-block" alt="Picture of Raleigh North Carolina">
 
             <p class="text-center fs-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
@@ -117,6 +117,10 @@
                         <li>Second item</li>
                         <li>Third item</li>
                       </ol>
+                      <!-- one ID selector to format specific elements of a page -->
+                      <div class="relative-content">
+                      GO CAROLINA HURRICANES!
+                      </div>
                     </div>
                   </div>
                 </div>
