--- a/Raleigh.html
+++ b/Raleigh.html
@@ -132,6 +132,8 @@
     
         <footer class="pt-3 mt-4 text-body-secondary border-top text-center">
           &copy; 2023 North Carolina. All rights reserved.
+          <a href="./contact.html" target="_blank">Contact Us</a>
+
         </footer>
     </main>
     
