--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>NORTH CAROLINA</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="mystyle.css">
-  </head>
-  <body>
-    <main>
-      <!--  a nav to place the links to navigate throughout the site -->
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Welcome to North Carolina</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="mystyle.css">
+</head>
+<body>
+  <main>
+    <!-- Navigation -->
+    <!--  a nav to place the links to navigate throughout the site -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">NC</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,26 +30,24 @@
         </div>
       </nav>
 
-      <!--  a header containing introductory content (pertaining to the document as a whole or a particular section of a document) -->
-      <header>
-
-        <div class="p-5 mb-4 bg-body-tertiary rounded-3 ">
-          <div class="container-fluid py-5 ">
-            <!--  a title in the head of each document that describes the web page’s individual topic -->
-            <h1 class="display-5 fw-bold text-center">Welcome to North Carolina!</h1>
-            <!--  a relevant image, including alternative text for the image -->
-            <img src="./images/Flag_of_North_Carolina.jpg" class="img-fluid" alt="Picture of Raleigh North Carolina">
-
-            <p class="text-center fs-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          </div>
+    <!-- Header -->
+    <header>
+      <div class="p-5 mb-4 bg-body-tertiary rounded-3">
+        <div class="container-fluid py-5">
+          <!--  a title in the head of each document that describes the web page’s individual topic --> 
+          <h1 class="display-5 fw-bold text-center">Welcome to North Carolina!</h1>
+          <!--  a relevant image, including alternative text for the image -->
+          <img src="./images/FlagNC.jpg" class="img-fluid" alt="Flag of North Carolina">
+          <p class="text-center fs-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
-      </header>
-<div class="container text-center">
-  <div class="row align-items-start">
-    <div class="col">
-      <!-- a section to display the main content of the page -->
-        <section class="">
-          <div>
+      </div>
+    </header>
+
+    <!-- Main Content Section -->
+    <div class="container text-center">
+      <div class="row align-items-start">
+        <div class="col">
+          <section>
             <div class="c-md-6">
               <div class="h-100 p-5 text-bg-dark rounded-3">
                 <h2>Main Content</h2>
@@ -56,36 +55,35 @@
                 <button class="btn btn-outline-light" type="button">Example button</button>
               </div>
             </div>
-        </section>
+          </section>
+        </div>
+
+        <!-- Aside Section -->
+        <div class="col">
+          <aside>
+            <div class="row-md-6">
+              <div class="h-100 p-5 bg-body-tertiary border rounded-3">
+                <h2>Aside Content</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <button class="btn btn-outline-secondary" type="button">Example button</button>
+              </div>
+            </div>
+          </aside>
+        </div>
+      </div>
     </div>
 
-    <div class="col">
-            <!-- an aside to display information related to the content -->
-                <aside>
-                  <div class="row-md-6">
-                    <div class="h-100 p-5 bg-body-tertiary border rounded-3">
-                      <h2>Aside Content</h2>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                      <button class="btn btn-outline-secondary" type="button">Example button</button>
-                    </div>
-                  </div>
-                </div>
-              </aside>
+    <!-- Footer -->
+    <footer class="pt-3 mt-4 text-body-secondary border-top text-center">
+      &copy; 2023 North Carolina. All rights reserved.
+      <!-- a link that opens an external website in a new window or tab using the target attribute -->
+      <a href="https://www.visitnc.com/" target="_blank">Visit North Carolina</a>
+      <a href="./Contact.html" target="_blank">Contact Us</a>
+    </footer>
+  </main>
 
-  </div>
-</div>
-
-    
-        <footer class="pt-3 mt-4 text-body-secondary border-top text-center">
-          &copy; 2023 North Carolina. All rights reserved.
-          <!-- a link that opens an external website in a new window or tab using the target attribute -->
-          <a href="https://www.visitnc.com/" target="_blank">Visit North Carolina</a>
-          <a href="./contact.html" target="_blank">Contact Us</a>
-
-
-        </footer>
-    </main>
-    
-  </body>
+  <!-- Bootstrap JS Script -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  </html>
+</body>
+</html>
+
