Cleaned up the images in my websites

--- a/Charlotte.html
+++ b/Charlotte.html
@@ -43,8 +43,8 @@
                     <h1 class="display-5 fw-bold text-center">Welcome to Charlotte!</h1>
                     <!--  a relevant image, including alternative text for the image -->
                     <img src="./images/charlotte.jpg"
-                        class="img-fluid rounded mx-auto d-block"
-                        alt="Picture of Raleigh North Carolina">
+                        class="img-fluid rounded mx-auto d-block w-50"
+                        alt="Picture of Charlotte North Carolina">
 
                     <p class="text-center fs-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
