--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
             <!--  a title in the head of each document that describes the web page’s individual topic -->
             <h1 class="display-5 fw-bold text-center">Let Us Know How We Did!</h1>
             <!--  a relevant image, including alternative text for the image -->
-            <img src="./images/raleigh.jpg" class="img-fluid rounded mx-auto d-block" alt="Picture of Raleigh North Carolina">
+            <img src="./images/thumbs_up.png" class="img-fluid rounded mx-auto d-block w-50" alt="Picture of Raleigh North Carolina">
 
             <p class="text-center fs-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
