--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <!--  a title in the head of each document that describes the web page’s individual topic --> 
           <h1 class="display-5 fw-bold text-center">Welcome to North Carolina!</h1>
           <!--  a relevant image, including alternative text for the image -->
-          <img src="./images/FlagNC.jpg" class="img-fluid" alt="Flag of North Carolina">
+          <img src="./images/FlagNC.jpg" class="img-fluid rounded mx-auto d-block w-50" alt="Picture of the flag of North Carolina">
           <p class="text-center fs-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
       </div>
