Completed the information for every city in my project

--- a/Asheville.html
+++ b/Asheville.html
@@ -36,7 +36,11 @@
           <h1 class="display-5 fw-bold text-center">Welcome to Asheville!</h1>
             <!--  a relevant image, including alternative text for the image -->
           <img src="./images/asheville.jpg" class="img-fluid rounded mx-auto d-block w-50" alt="Picture of Asheville North Carolina">
-          <p class="text-center fs-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p class="text-center fs-5">Immersed deep within the scenic vistas of Blue Ridge Mountains, Asheville in North Carolina splendidly upholds its image as a dynamic and culturally thriving city. Renowned for harmonizing historic allure with progressive gusto, this robust locale never fails to impress! With an animated arts sphere, distinct architecture choices and generous locals - it's always buzzing with creative energy. Artists find their muse here; musicians get inspired while outdoor adventurers feel right at home!
+
+            The famed Biltmore Estate calls Asheville home too; being the largest privately-owned property across America tastefully injects luxe into local life here. The natural resplendence is beautifully balanced by diversity-filled gourmet retreats that offer everything from fine dining experiences to locally brewed beverages.
+            
+            Asheville not only appreciates art but also holds sustainability close to heart – twin attributes that give visitors pause initially then hooks them indefinitely! Be ready for anything when you visit...in essence, escape mundane reality because every moment spent amid these glorious stretches of Appalachian beauty ends up fueling inspiration where typically none would have existed prior!</p>
         </div>
       </div>
     </header>
@@ -48,7 +52,7 @@
           <section>
             <div class="c-md-6">
               <div class="h-100 p-5 text-bg-dark rounded-3">
-                <h2>Main Content</h2>
+                <h2>Land of The Sky</h2>
 <!--the city’s population, the year the city was incorporated, the region of the state in which the city is located, the classification of the city: urban, suburban, and/or rural, the average income level of the city compared to the rest of the state 
 -->
 
@@ -64,27 +68,27 @@
                     <tr>
                       <th scope="row">1</th>
                       <td>City's Population</td>
-                      <td>Replace with actual data</td>
+                      <td>93,776</td>
                     </tr>
                     <tr>
                       <th scope="row">2</th>
                       <td>Year Incorporated</td>
-                      <td>Replace with actual data</td>
+                      <td>1797</td>
                     </tr>
                     <tr>
                       <th scope="row">3</th>
                       <td>Region</td>
-                      <td>Replace with actual data</td>
+                      <td>West-Central North Carolina</td>
                     </tr>
                     <tr>
                       <th scope="row">4</th>
                       <td>Classification</td>
-                      <td>Replace with actual data</td>
+                      <td>Urban</td>
                     </tr>
                     <tr>
                       <th scope="row">5</th>
                       <td>Average Income</td>
-                      <td>Replace with actual data</td>
+                      <td>$41,343 (Above State Average)</td>
                     </tr>
                   </tbody>
                 </table>
@@ -98,31 +102,31 @@
           <aside>
             <div class="row-md-6">
               <div class="h-100 p-5 bg-body-tertiary border rounded-3">
-                <h2>Aside Content</h2>
+                <h2>Fun Things To Do!</h2>
         <!-- an HTML-coded table consisting of 3–6 columns and 3–6 rows to organize content -->
                 <table border="1">
                   <thead>
                     <tr>
-                      <th>Column 1</th>
-                      <th>Column 2</th>
-                      <th>Column 3</th>
+                      <th>Great Outdoor Adventures</th>
+                      <th>Craft Beverage and Culinary Exploration</th>
+                      <th>Cultural and Artistic Pursuits</th>
                     </tr>
                   </thead>
                   <tbody>
                     <tr>
-                      <td>Row 1, Cell 1</td>
-                      <td>Row 1, Cell 2</td>
-                      <td>Row 1, Cell 3</td>
+                      <td>Drive along the Blue Ridge Parkway and see the beautiful mountains</td>
+                      <td>Unleash your inner foodie by jumping onto a gastronomic journey with a local food tour</td>
+                      <td>Check out the fine art exhibits at the Asheville Art Museum</td>
                     </tr>
                     <tr>
-                      <td>Row 2, Cell 1</td>
-                      <td>Row 2, Cell 2</td>
-                      <td>Row 2, Cell 3</td>
+                      <td>Go waterfall hunting and soak your feet in the water</td>
+                      <td>Asheville is a special place for craft-brew enthusiasts.With more breweries per capita than any other city, you’ll have plenty of options to consider.</td>
+                      <td>Take in the pulsating arts scene of the city with a live show at Diana Wortham Theatre</td>
                     </tr>
                     <tr>
-                      <td>Row 3, Cell 1</td>
-                      <td>Row 3, Cell 2</td>
-                      <td>Row 3, Cell 3</td>
+                      <td>Visit the highest point east of the Mississippi, Mt. Mitchell</td>
+                      <td>Sip the mountain’s finest nectar while visiting urban and rural wineries, or go for a free tasting at Biltmore, the most visited winery in America.</td>
+                      <td>Embark on a daylong adventure in the heart of Asheville's lively arts scene - the River Arts District (RAD)</td>
                     </tr>
                   </tbody>
                 </table>
