--- a/Charlotte.html
+++ b/Charlotte.html
@@ -46,12 +46,7 @@
                         class="img-fluid rounded mx-auto d-block w-50"
                         alt="Picture of Charlotte North Carolina">
 
-                    <p class="text-center fs-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                        reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-                        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-                        laborum.</p>
+                    <p class="text-center fs-5">Nestled in the epicenter of North Carolina, Charlotte buzzes with activity as a city recognized for its Southern allure, economic vitality and cultural wealth. As it stands tall being both the biggest urban sprawl within the state lines and pivotal financial hub, this metropolis's remarkable skyline mirrors its economical importance. Moreover than just being a center of finance, Charlotte offers an eclectic assortment of culture through exquisite museums, flourishing arts scene, and vibrant culinary options which give one an expansive experience at charlotte. The magnetism that is inherent to "Queen City," stems from inviting neighborhoods intermingling perfectly with verdant slices  f nature interspersed throughout , not forgetting their relentless dedication towards encouraging community involvement.This perfect blend makes   Queen city  strikingly appealing by effortlessly merging chic sophistication found in cities complementing that quintessential southern warmth.</p>
                 </div>
             </div>
         </header>
@@ -62,7 +57,7 @@
                     <section>
                         <div class="c-md-6">
                             <div class="h-100 p-5 text-bg-dark rounded-3">
-                                <h2>Main Content</h2>
+                                <h2>Queen City</h2>
 
 <!--the city’s population, the year the city was incorporated, the region of the state in which the city is located, the classification of the city: urban, suburban, and/or rural, the average income level of the city compared to the rest of the state 
 -->
@@ -79,27 +74,27 @@
                                         <tr>
                                             <th scope="row">1</th>
                                             <td>City's Population</td>
-                                            <td>#</td>
+                                            <td>897,720</td>
                                         </tr>
                                         <tr>
                                             <th scope="row">2</th>
                                             <td>Year Incorporated</td>
-                                            <td>#</td>
+                                            <td>1768</td>
                                         </tr>
                                         <tr>
                                             <th scope="row">2</th>
                                             <td>Region</td>
-                                            <td>#</td>
+                                            <td>South-East North Carolina</td>
                                         </tr>
                                         <tr>
                                             <th scope="row">2</th>
                                             <td>Classification</td>
-                                            <td>#</td>
+                                            <td>Suburban</td>
                                         </tr>
                                         <tr>
                                             <th scope="row">2</th>
                                             <td>Average Income</td>
-                                            <td>#</td>
+                                            <td>$49,498 (Above State Average)</td>
                                         </tr>
 
                                     </tbody>
@@ -113,12 +108,12 @@
                     <aside>
                         <div class="row-md-6">
                             <div class="h-100 p-5 bg-body-tertiary border rounded-3">
-                                <h2>Aside Content</h2>
+                                <h2>Fun Things To Do!</h2>
                                 <!-- an HTML-coded unordered list with at least three list items -->
                                 <ul>
-                                    <li>Apple</li>
-                                    <li>Banana</li>
-                                    <li>Orange</li>
+                                    <li>Visit the Nascar Hall of Fame Museum</li>
+                                    <li>Go see the Carolina Panthers at the Bank Of America Stadium</li>
+                                    <li>Ride a RollerCoaster at Carowinds</li>
                                 </ul>
                             </div>
                         </div>
@@ -126,10 +121,14 @@
                         <!--  one class selector that is used at least two times to style HTML elements -->
                         <div class="container">
                             <div class="box1 my-class">
-                                <p>Box 1</p>
+                                <p>Purchase Tickets to Panthers Game</p>
+                                <a href="https://www.panthers.com/tickets/" target="_blank">Purchase game tickets</a>
+
                             </div>
                             <div class="box2 my-class">
-                                <p>Box 2</p>
+                                <p>Purchase Tickets to Carowinds</p>
+                                <a href="https://www.carowinds.com/" target="_blank">Purchase ride tickets</a>
+
                             </div>
                         </div>
 
