--- a/Raleigh.html
+++ b/Raleigh.html
@@ -39,7 +39,11 @@
             <!--  a relevant image, including alternative text for the image -->
             <img src="./images/raleigh.jpg" class="img-fluid rounded mx-auto d-block w-50" alt="Picture of Raleigh North Carolina">
 
-            <p class="text-center fs-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p class="text-center fs-5">In the heart of North Carolina, Raleigh bursts with energy as an evolving capital city that masterfully marries Southern allure and tech-savvy ingenuity. With its thriving financial health, globally respected educational institutions, and creatively enriched ambiance - it's no wonder this metropolis persistently clinches top spots for living standards and professional prospects!
+
+              Nestled in Raleigh is the famed Research Triangle Park—an epicenter characterized by trailblazing investigations—making it a magnet to professionals on both scientific research fronts or academic grounds! Spend time exploring districts like Mordecai or Fayetteville Street. It lets you travel back into times past while feasting your eyes upon modern infrastructure scattered across town exhibiting their dedication towards balanced urban growth.
+              
+              Sprinkled generously are bits from every entertainment genre—a multitude of museum exhibits narrating tales untold; lush parks promising tranquility amidst suburban hustle-bustle—all tucked delicately within arm’s reach. Inheriting historic roots yet embracing progression,Raleigh presents itself as an enticing enclave uniting rich customs alongside fresh wave innovative charm making it irresistible whether you're calling this place home sweet home–or simply stopping by!</p>
           </div>
         </div>
       </header>
@@ -53,7 +57,7 @@
           <div>
             <div class="c-md-6">
               <div class="h-100 p-5 text-bg-dark rounded-3">
-                <h2>Main Content</h2>
+                <h2>City of Oaks</h2>
                 
 <!--the city’s population, the year the city was incorporated, the region of the state in which the city is located, the classification of the city: urban, suburban, and/or rural, the average income level of the city compared to the rest of the state 
 -->
@@ -70,25 +74,25 @@
       <tr>
         <th scope="row">1</th>
         <td>City's Population</td>
-        <td>#</td>
+        <td>476,587</td>
       </tr>
       <tr>
         <th scope="row">2</th>
         <td>Year Incorporated</td>
-        <td>#</td>
+        <td>1792</td>
       </tr>
       <tr>
         <th scope="row">2</th>
         <td>Region</td>
-        <td>#</td>
+        <td>Central North Carolina</td>
       </tr>                <tr>
         <th scope="row">2</th>
         <td>Classification</td>
-        <td>#</td>
+        <td>Suburban</td>
       </tr>                <tr>
         <th scope="row">2</th>
         <td>Average Income</td>
-        <td>#</td>
+        <td>$47,035 (Above State Average)</td>
       </tr>
 
     </tbody>
@@ -104,16 +108,18 @@
                 <aside>
                   <div class="row-md-6">
                     <div class="h-100 p-5 bg-body-tertiary border rounded-3">
-                      <h2>Aside Content</h2>
+                      <h2>Fun Things To Do!</h2>
                       <!-- an HTML-coded ordered list with at least three list items -->
                       <ol>
-                        <li>First item</li>
-                        <li>Second item</li>
-                        <li>Third item</li>
+                        <li>Visit the North Carolina Museum of Art</li>
+                        <li>Go see the Carolina Hurricanes play at the PNC Arena</li>
+                        <li>Look and eat at the tasty fruits/vegetables at the State Farmers Market</li>
                       </ol>
                       <!-- one ID selector to format specific elements of a page -->
                       <div class="relative-content">
                       GO CAROLINA HURRICANES!
+                      <a href="https://www.nhl.com/hurricanes/tickets/?gad_source=1&gclid=CjwKCAiApuCrBhAuEiwA8VJ6JmsUHyxts94xWvHlV8aCPE5SKV9lA9RdOHHhcWo71NPBpR08cNsvjhoCvT0QAvD_BwE" target="_blank">Purchase tickets to a Hurricanes game</a>
+
                       </div>
                     </div>
                   </div>
