finished the front home page

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <h1 class="display-5 fw-bold text-center">Welcome to North Carolina!</h1>
           <!--  a relevant image, including alternative text for the image -->
           <img src="./images/FlagNC.jpg" class="img-fluid rounded mx-auto d-block w-50" alt="Picture of the flag of North Carolina">
-          <p class="text-center fs-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p class="text-center fs-5">Situated in the southeastern corner of America, North Carolina is a state that perfectly blends the old and new. It's one of those sought-after places where over 10 million folks have decided to set up home, making it amongst top ten most populated states nationwide! Back on November 21st,1789 was when this grand ol' place joined hands with Union family, Ever since then its influence has been rippling through times till today. Politics? Culture? They thrive here - just take Raleigh for instance; US wouldn't be the same without contributions from NC's capital! Scenic-wise too you'd find variety like nowhere else – towering Blue Ridge Mountains at one end while idyllic Outer Banks rest peacefully on other end . If there was a prize for blending history, culture, economic prowess into some kind historic-cultural-economic smoothie, undoubtedly North Carolina would bag it effortlessly!</p>
         </div>
       </div>
     </header>
@@ -50,9 +50,8 @@
           <section>
             <div class="c-md-6">
               <div class="h-100 p-5 text-bg-dark rounded-3">
-                <h2>Main Content</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <button class="btn btn-outline-light" type="button">Example button</button>
+                <h2>The Tarheel State</h2>
+                <p>You might often hear North Carolina being called the "Tar Heel State." This nickname originates from murky historical roots, going as far back as the 19th century. Though there are a few ideas floating around about how it started, one of them is fairly popular: It's related to when our nation was divided during the Civil War. The soldiers from North Carolina, especially ones close to shore, were admired for their unyielding courage and grit on battlefields. As legend tells us, these brave individuals stayed so steady in heated battles that they seemed rooted down with sticky tar on their heels like glue! So aptly dubbed 'tar heeled,' this phrase became an embodiment of honor and state pride for folks here in NC over time and we love using it till now because symbolizes just how resilient Tar Heels always have been and always will be!</p>
               </div>
             </div>
           </section>
@@ -63,9 +62,10 @@
           <aside>
             <div class="row-md-6">
               <div class="h-100 p-5 bg-body-tertiary border rounded-3">
-                <h2>Aside Content</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <button class="btn btn-outline-secondary" type="button">Example button</button>
+                <h2>Explore the official North Carolina website by following the link provided below.</h2>
+                <!-- a link that opens an external website in a new window or tab using the target attribute -->
+                <button class="btn btn-outline-secondary" type="button"> <a href="https://www.visitnc.com/" target="_blank">Visit North Carolina</a>
+                </button>
               </div>
             </div>
           </aside>
@@ -76,8 +76,6 @@
     <!-- Footer -->
     <footer class="pt-3 mt-4 text-body-secondary border-top text-center">
       &copy; 2023 North Carolina. All rights reserved.
-      <!-- a link that opens an external website in a new window or tab using the target attribute -->
-      <a href="https://www.visitnc.com/" target="_blank">Visit North Carolina</a>
       <a href="./Contact.html" target="_blank">Contact Us</a>
     </footer>
   </main>
