--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
             <!--  a relevant image, including alternative text for the image -->
             <img src="./images/thumbs_up.png" class="img-fluid rounded mx-auto d-block w-50" alt="Picture of Raleigh North Carolina">
 
-            <p class="text-center fs-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p class="text-center fs-5">Leaving a comment or question about a company signals active engagement and a genuine interest in its offerings. Please let us know your thoughts! </p>
           </div>
         </div>
       </header>
@@ -87,8 +87,7 @@
                 <aside>
                   <div class="row-md-6">
                     <div class="h-100 p-5 bg-body-tertiary border rounded-3">
-                      <h2>Aside Content</h2>
-
+                      <h2>We really value your opinion!</h2>
                     </div>
                   </div>
                 </div>
