changed thumps up type to jpg

--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
             <!--  a title in the head of each document that describes the web page’s individual topic -->
             <h1 class="display-5 fw-bold text-center">Let Us Know How We Did!</h1>
             <!--  a relevant image, including alternative text for the image -->
-            <img src="./images/thumbs_up.png" class="img-fluid rounded mx-auto d-block w-50" alt="Picture of Raleigh North Carolina">
+            <img src="./images/thumbs_up.jpg" class="img-fluid rounded mx-auto d-block w-50" alt="Picture of Raleigh North Carolina">
 
             <p class="text-center fs-5">Leaving a comment or question about a company signals active engagement and a genuine interest in its offerings. Please let us know your thoughts! </p>
           </div>
